# nugraph

./: .gitignore  cheatsheet.md
notebooks/: explore_dataset.ipynb  plot.ipynb  train.ipynb
nugraph/nugraph/data/: data_module.py
nugraph/nugraph/models/nugraph3/decoders/: instance.py
nugraph/nugraph/util/: confusion_matrix_logger.py
pywcml/: README.md  __init__.py  cli.py  config.py  converter.py  geometry.py  io.py  pyproject.toml  setup.cfg
pywcml/sample/: labeled_samples  rec-lab-apa0-0.h5  rec-lab-apa0-0.npz
scripts/: explore_dataset.py  plot_blob_projections.py  plot_ctpc.py  wcml_to_h5.py
test/: NG2-paper.gnn.keep1.h5
