[metadata]
name = pywcml
version = 0.1.0
description = Utilities for converting Wire-Cell ML NPZ files into NuGraph-compatible datasets.
long_description = file: README.md
long_description_content_type = text/markdown
author = SBND Collaboration
license = BSD-3-Clause
url = https://github.com/sbnd/nugraph

[options]
packages = pywcml
package_dir =
    pywcml = .
python_requires = >=3.9
install_requires =
    numpy
    torch
    h5py
    matplotlib

[options.entry_points]
console_scripts =
    wcml-to-h5 = pywcml.cli:main
